--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_Layout.cshtml
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_Layout.cshtml
@@ -24,7 +24,15 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>
+                            @Html.ActionLink("Manage courses", "Index", "Course")
+                        </li>
+                    }
                 </ul>
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
