--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Course/Create.cshtml
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Course/Create.cshtml
@@ -1,14 +1,14 @@
 ﻿@model StudentSystem.Clients.Mvc.ViewModels.Course.CourseAddViewModel
 
-@using (Html.BeginForm<CourseController>(x => x.Create(), FormMethod.Post, new { @class = "form-horizontal form-label-left", role = "form"}))
+<h1>
+    Create a new course
+</h1>
+
+<hr />
+
+@using (Html.BeginForm<CourseController>(x => x.Create(), FormMethod.Post, new { @class = "form-horizontal", role = "form"}))
 {
     @Html.AntiForgeryToken()
-
-    <h4>
-        Create a new course
-    </h4>
-    <hr />
-
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
     <div class="form-group">
