--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Account/Register.cshtml
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Account/Register.cshtml
@@ -1,10 +1,15 @@
-﻿@model StudentSystem.Clients.Mvc.Models.RegisterViewModel
+﻿@model StudentSystem.Clients.Mvc.ViewModels.Account.RegisterViewModel
+
+<h1>
+    Create a new account.
+</h1>
+
+<hr />
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
+    
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -12,18 +17,21 @@
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
