--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Course/Create.cshtml
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Course/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentSystem.Clients.Mvc.ViewModels.Course.CourseAddViewModel
+﻿@model StudentSystem.Clients.Mvc.ViewModels.Course.CourseViewModel
 
 <h1>
     Create a new course
@@ -6,7 +6,7 @@
 
 <hr />
 
-@using (Html.BeginForm<CourseController>(x => x.Create(), FormMethod.Post, new { @class = "form-horizontal", role = "form"}))
+@using (Html.BeginForm("Create", "Course", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -17,7 +17,7 @@
             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
         </div>
     </div>
-   
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Save" />
