--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_Layout.cshtml
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_Layout.cshtml
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>
+        Student System
+    </title>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,18 +20,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>
-                            @Html.ActionLink("Manage courses", "Index", "Course")
+                            @(Html.ActionLink<CourseController>("Available Coursess", x => x.AvailableCourses()))
+                        </li>
+                        <li>
+                            @(Html.ActionLink<CourseController>("Manage courses", x => x.ManageCourses()))
                         </li>
                     }
                 </ul>
@@ -41,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Student System</p>
         </footer>
     </div>
 
