--- a/src/Clients/StudentSystem.Clients.Mvc/Views/Course/AvailableCourses.cshtml
+++ b/src/Clients/StudentSystem.Clients.Mvc/Views/Course/AvailableCourses.cshtml
@@ -6,19 +6,61 @@
 
 <hr />
 
-@(Html.ActionLink<CourseController>("Add", c => c.Create(), null, new { @class = "btn btn-default" }))
+@(Html.ActionLink<CourseController>("See all enrolled courses", c => c.EnrolledCourses(), null, new { @class = "btn btn-default" }))
 
-<div>
-    @Html.Grid(Model).Columns(columns =>
-    {
-        columns.Add(c => c.Name).Titled("Name");
-        columns.Add()
-            .Titled("Edit")
-            .Sanitized(false)
-            .Encoded(false)
-            .RenderValueAs(c => Html.ActionLink<CourseController>("Edit",
-                                                                   e => e.Edit(c.Id),
-                                                                   null,
-                                                                   new { @class = "btn btn-default" }));
-    })
-</div>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th class="col-md-9 col-sm-1 col-xs-1">
+                Course
+            </th>
+            <th class="col-md-3 col-sm-3 col-xs-3">
+                Action
+            </th>
+        </tr>
+    </thead>
+    <tbody id="available-courses">
+        @Html.AntiForgeryToken()
+
+        @foreach (var course in Model)
+        {
+            <tr data-course-id="@course.Id">
+                <td class="col-md-9 col-sm-9 col-xs-9">
+                    @course.Name
+                </td>
+
+                <td class="col-md-3 col-sm-3 col-xs-3">
+                    <span class="enroll btn btn-default">
+                        Enroll
+                    </span>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+@section scripts {
+    <script>
+        $('.enroll').on('click', function () {
+            debugger;
+            var token = $('input[name="__RequestVerificationToken"]').val();
+
+            var courseId = $(this).closest('tr').attr('data-course-id');
+
+            $.ajax({
+                type: 'POST',
+                url: '/Course/Enroll',
+                data: {
+                    __RequestVerificationToken: token,
+                    courseId: courseId
+                },
+                success: function (data) {
+                    alert(data);
+                },
+                error: function (ex) {
+                    alert('Cannot enroll!' + ex);
+                }
+            });
+        });
+    </script>
+}
