--- a/src/Clients/StudentSystem.Clients.Mvc/Views/Course/ManageCourses.cshtml
+++ b/src/Clients/StudentSystem.Clients.Mvc/Views/Course/ManageCourses.cshtml
@@ -31,7 +31,7 @@
                                                                    new
                                                                    {
                                                                        @class = "btn btn-danger",
-                                                                       onclick = "return confirm('Are you sure you wish to delete this contest?');"
+                                                                       onclick = "return confirm('Are you sure you want to delete this course?');"
                                                                    }));
     })
 </div>
