--- a/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
-
-@if (Request.IsAuthenticated)
+﻿@if (Request.IsAuthenticated)
 {
     using (Html.BeginForm<AccountController>(x => x.LogOff(), FormMethod.Post, null, new { id = "logoutForm", @class = "navbar-right" }))
     {
@@ -9,7 +7,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a href="#">
-                    Hello @User.Identity.GetUserName()
+                    Hello @User.Identity.Name)
                 </a>
             </li>
             <li>
