moved client validation messages in separate class

--- a/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/src/Clients/StudentSystem.Clients.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a href="#">
-                    Hello @User.Identity.Name)
+                    Hello @User.Identity.Name
                 </a>
             </li>
             <li>
