--- a/src/Clients/StudentSystem.Clients.Mvc/Views/Course/Index.cshtml
+++ b/src/Clients/StudentSystem.Clients.Mvc/Views/Course/Index.cshtml
@@ -6,7 +6,9 @@
 
 <hr />
 
-@(Html.ActionLink<CourseController>("See all enrolled courses", c => c.EnrolledCourses(), null, new { @class = "btn btn-default" }))
+@Html.ValidationSummary()
+
+@(Html.ActionLink<StudentController>("See all enrolled courses", c => c.Courses(), null, new { @class = "btn btn-default" }))
 
 <table class="table table-striped">
     <thead>
@@ -21,21 +23,33 @@
     </thead>
     <tbody id="available-courses">
         @Html.AntiForgeryToken()
-
-        @foreach (var course in Model)
+            
+        @if (!Model.Any())
         {
-            <tr data-course-id="@course.Id">
+            <tr>
                 <td class="col-md-9 col-sm-9 col-xs-9">
-                    @course.Name
-                </td>
-
-                <td class="col-md-3 col-sm-3 col-xs-3">
-                    <span class="enroll btn btn-default">
-                        Enroll
-                    </span>
+                    There are no items to display
                 </td>
             </tr>
         }
+        else
+        {
+            foreach (var course in Model)
+             {
+                 <tr data-course-id="@course.Id">
+                     <td class="col-md-9 col-sm-9 col-xs-9">
+                         @course.Name
+                     </td>
+
+                     <td class="col-md-3 col-sm-3 col-xs-3">
+                         <span class="enroll btn btn-default">
+                             Enroll
+                         </span>
+                     </td>
+                 </tr>
+             }
+        }
+   
     </tbody>
 </table>
 
@@ -48,7 +62,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: '/Course/Enroll',
+                url: '@Url.Action("Enroll", "Student")',
                 data: {
                     __RequestVerificationToken: token,
                     courseId: courseId
